@@ -2,6 +2,7 @@ unreleased
 
 * Enhancements
 
+  * If a column is named "Did you really see it?", try #Did_you_really_see_it? and #did_you_really_see_it? (previously we lost ? and ! characters)
   * If a "body.rows" method yields instead of just returning an enumerable, re-yield it
   * If a column block takes 2 args (arity = 2), pass it report and row obj. This is useful when each row is calculated using (1) the row object and (2) something defined only on the report instance itself.
 
